# algorithms

./: .gitmodules  CMakeLists.txt
include/algorithms/: algorithms.hpp  allocator.hpp  array.hpp  array_.hpp  array_dynamic.hpp  array_static.hpp  common.hpp  compiler.hpp  construct.hpp  lexeme.hpp  operator.hpp  parser.hpp  pointee.hpp  scanner.hpp  sequence.hpp  size.hpp  token.hpp  vector.hpp  vm.hpp
src/: CMakeLists.txt  algorithms.cpp  operator.cpp  pointee.cpp
tests/: test_algorithms.cpp  test_compiler.cpp  test_sequence.cpp
tests/src/: CMakeLists.txt  test_algorithms.cpp  test_allocator.cpp  test_array.cpp  test_main.cpp  test_pointee.cpp  test_sequence.cpp  test_vector.cpp
